--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -25,7 +25,7 @@
         font-family: "outfit", sans-serif;
       }
       .container {
-        height: 60vh;
+        min-height: 60vh;
         display: flex;
         align-items: center;
         justify-content: center;
@@ -35,11 +35,11 @@
         margin: 90px auto 0 auto;
         padding: 25px;
         border-radius: 20px;
-        box-shadow: ;
+        box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.1);
       }
       .qr-code-img {
         width: 100%;
-        height: 600px;
+        max-height: 600px;
         object-fit: cover;
         border-radius: 20px;
       }
