--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -41,7 +41,7 @@
         width: 100%;
         max-height: 600px;
         object-fit: cover;
-        border-radius: 20px;
+        border-radius: 24px;
       }
       h1,
       p {
@@ -54,10 +54,7 @@
         color: hsl(216, 15%, 48%);
       }
       .attribution {
-        position: absolute;
-        bottom: 10%;
-        left: 50%;
-        transform: translateX(-50%);
+        margin-top: 2rem;
         font-size: 11px;
         text-align: center;
       }
