--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   </head>
   <body>
     <div class="container">
-      <img src="images/image-qr-code.png" class="qr-code-img" alt="QRcode" />
+      <img src="./images/image-qr-code.png" class="qr-code-img" alt="QRcode" />
       <h1>Improve your front-end skills by building projects</h1>
       <p>
         Scan the QR code to visit Frontend Mentor and take your coding skills to
