--- a/index.html
+++ b/index.html
@@ -80,7 +80,10 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Happiness Olukayode</a>.
+      >. Coded by
+      <a href="https://github.com/uptowngirl757/qr_code_project"
+        >Happiness Olukayode</a
+      >.
     </div>
   </body>
 </html>
