--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
         font-family: "outfit", sans-serif;
       }
       .container {
-        min-height: 60vh;
+        /* min-height: 60vh; */
         display: flex;
         align-items: center;
         justify-content: center;
         flex-direction: column;
         background-color: #fff;
         max-width: 370px;
-        margin: 90px auto 0 auto;
-        padding: 25px;
+        margin: 90px auto;
+        padding: 1rem;
         border-radius: 20px;
         box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.1);
       }
